fixed alignment and graphics

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Quicksand', sans-serif;
+	position: relative;
 }
 
 header {
@@ -30,20 +31,24 @@ h1 {
 	float: right;
 	margin: auto;
 	display: inline-block;
-	height: 450px;
-	width: 180px;
+	height: 650px;
+	width: 200px;
 	background-color: rgba(0, 0, 0, 0.3);
+	margin-top: 55px;
+/*	border: 30px solid transparent;
 	border-radius: 20px;
-	/*border-style: solid;*/
-	border-image-source: : url(shell1.png); /*doesn't work*/
+	padding: 15px;
+	border-style: solid;
+	border-image: url(shell-rendered.png); 
 	border-image-repeat: round;
-	border-image-slice: 20 22;
+	border-image-slice: 20;
+	border-image-width: 20px;*/
 }
 
 .container {
 	margin: 0 auto;
-	width: 700px;
-	overflow: auto;
+	width: 950px;
+*/	overflow: auto;
 	text-align: center;
 	padding-top: 10px;
 	margin-bottom: 30px;
@@ -52,7 +57,15 @@ h1 {
 #table {
 	display: inline-block;
 	position: relative;
+	height: 700px;
 	float: left;
+}
+
+#table-frame {
+	display: inline-block;
+	position: absolute;
+	top: 27px;
+	left: 10px;
 }
 
 #balance {
@@ -60,7 +73,7 @@ h1 {
 	display: inline-block;
 	background-image: url(background1.jpg);
 	box-shadow: inset 0 0 0 4px #5e676e;
-	margin: 40px 20px 10px 0;
+	margin: 20px 0 0 0;
 	border-radius: 10px;
 	width: 150px;
 	height: 30px;
@@ -74,6 +87,8 @@ h1 {
     border: lightblue 3px;
 }
 
+
+
 /*form {
 	color: white;
 }*/
@@ -83,19 +98,22 @@ h1 {
 	color: black;
 	font-weight: bold;
 	text-align: center;
-	padding-top: 10px;
+	padding-top: 8px;
 	padding-bottom: 20px;
 	background-color: rgba(255, 255, 255, 0.5);
 	display: block;
 	margin: 0 auto;
 	width: 700px;
-	height: 15px;
+	height: 20px;
 	border-radius: 20px;
 }
 
 #board {
 	border-collapse: collapse;
 	border-image: url(shell1.png) 25% round;
+	position: absolute;
+	top: 103px;
+	left: 165px;
 	/*margin: auto;
 	margin: 10 auto;*/
 }
@@ -110,7 +128,6 @@ h1 {
 	height: 143px;
 	width: 143px;
 	vertical-align: middle;
-
 }
 
 #board td img.loser-cell {
@@ -126,7 +143,7 @@ h1 {
 	left: 10px;
 	font-weight: 200;
 	font-size: 1.35em;
-	padding: 10px 10px 10px 60px;
+	padding: 10px 10px 0 60px;
 	margin: 10px auto;
 	height: 10px;
 	width: 60px;
@@ -147,6 +164,7 @@ h1 {
 footer {
 	padding-top: 30px;
 	color: white;
+	clear: both;
 }
 
 /* ---- Spin Reels Button --- */
@@ -211,8 +229,8 @@ footer {
 
 .button {
     position: relative;
-    top: 00px;
-    left: 200px;
+    top: 50px;
+/*    left: 200px;*/
     display: inline-block;
     margin: 0 auto;
     
@@ -288,7 +306,7 @@ footer {
     text-transform: uppercase;
     font-family: 'TradeGothicLTStd-BdCn20', sans-serif;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 20px;
     text-shadow: 0px 1px #fff, 0px -1px #262F33;
 }
 
